5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1635_2711.log
== TEST (2019-04-07 23:33:39) 
-- CODE:
d = float(input())
t = int(input())
vt = float(input())
p = int(input())
vp = float(input())
A = (t * vt + p * vp)
if(d)
-- ERROR:
File "XXXX", line 7
    if(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:34:46) 
-- CODE:
d = float(input())
t = int(input())
vt = float(input())
p = int(input())
vp = float(input())
A = (t * vt + p * vp)
if(d > A):
	msg = " SUFICIENTE "
else:
	msg = " INSUFICIENTE "
	
print(msg)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 23:35:10) 
-- CODE:
d = float(input())
t = int(input())
vt = float(input())
p = int(input())
vp = float(input())
A = (t * vt + p * vp)
if(d > A):
	msg = " SUFICIENTE "
else:
	msg = " INSUFICIENTE "
	
print(msg)
-- EXECUTION TIME:
0.225664
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
